<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/gray_bg"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:layout_margin="@dimen/dimen_16"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/security"
        android:textSize="@dimen/dimen_16_sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:cardBackgroundColor="#f0737b"
        android:layout_margin="@dimen/dimen_16"
        app:cardCornerRadius="@dimen/dimen_16"
        android:id="@+id/pink_card"
        app:cardElevation="@dimen/dimen_16"/>

    <TextView
        android:id="@+id/text_sos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sos"
        android:elevation="@dimen/dimen_16"
        app:layout_constraintTop_toTopOf="@id/pink_card"
        app:layout_constraintStart_toStartOf="@id/pink_card"
        android:textColor="#FFFFFF"
        android:layout_margin="@dimen/dimen_16"
        android:textStyle="bold"
        android:textSize="24sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_sos"
        android:text="@string/sos_messages"
        android:id="@+id/sos_message"
        android:textColor="#FFFFFF"
        android:layout_margin="@dimen/dimen_16"
        app:layout_constraintStart_toStartOf="@id/pink_card"
        app:layout_constraintEnd_toEndOf="@id/pink_card"
        app:layout_constraintEnd_toStartOf="@+id/sos_image"
        android:elevation="@dimen/dimen_16"/>


    <ImageView
        android:id="@+id/sos_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_margin="@dimen/dimen_16"
        android:src="@drawable/ic_sos"
        android:elevation="@dimen/dimen_16"
        app:layout_constraintEnd_toEndOf="@id/pink_card"
        app:layout_constraintTop_toTopOf="@id/pink_card"
        app:layout_constraintBottom_toBottomOf="@id/pink_card"/>



    <androidx.cardview.widget.CardView
        app:cardElevation="@dimen/dimen_16"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:layout_constraintTop_toBottomOf="@id/pink_card"
        app:cardBackgroundColor="#63d2cB"
        android:layout_margin="@dimen/dimen_16"
        app:cardCornerRadius="@dimen/dimen_16"
        android:id="@+id/green_card"/>

    <TextView
        android:id="@+id/text_guard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/green_card"
        app:layout_constraintTop_toTopOf="@id/green_card"
        android:text="@string/guard"
        android:textColor="#FFF"
        android:elevation="@dimen/dimen_16"
        android:layout_margin="@dimen/dimen_16"
        android:textStyle="bold"
        android:textSize="24sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_guard"
        android:text="@string/guard_messages"
        android:id="@+id/guard_message"
        android:textColor="#FFFFFF"
        android:layout_margin="@dimen/dimen_16"
        app:layout_constraintStart_toStartOf="@id/green_card"
        app:layout_constraintEnd_toEndOf="@id/green_card"
        app:layout_constraintEnd_toStartOf="@id/sos_guard"
        android:elevation="@dimen/dimen_16"/>

    <ImageView
        android:id="@+id/sos_guard"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_margin="@dimen/dimen_16"
        android:src="@drawable/ic_guard"
        android:elevation="@dimen/dimen_16"
        app:layout_constraintEnd_toEndOf="@id/green_card"
        app:layout_constraintTop_toTopOf="@id/green_card"
        app:layout_constraintBottom_toBottomOf="@id/green_card"/>




</androidx.constraintlayout.widget.ConstraintLayout>